project(mmtf_cpp)
include_directories(/home/danpf/git/binder/examples/mmtf_example/../../source)
include_directories(/home/danpf/git/binder/examples/mmtf_example/include)
include_directories(/home/danpf/git/binder/examples/mmtf_example/include)
include_directories(/home/danpf/git/binder/examples/mmtf_example/include/mmtf)
include_directories(/home/danpf/git/binder/examples/mmtf_example/../../build/pybind11/include)
include_directories(/home/danpf/.local/share/pyenv/versions/3.7.0/include/python3.7m)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/hardware)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/hardware/simd)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/hardware/simd/x86)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/hardware/simd/ppc)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/hardware/simd/x86_amd)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/hardware/simd/arm)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/library)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/library/std)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/library/c)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/os)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/os/bsd)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/other)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/platform)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/compiler)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/language)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/architecture)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/predef/architecture/x86)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/adaptor)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/adaptor/cpp11)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/adaptor/cpp17)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/adaptor/tr1)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/adaptor/boost)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/v2)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/v2/adaptor)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/v2/adaptor/boost)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/v2/adaptor/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/v2/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/v1)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/v1/adaptor)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/v1/adaptor/cpp11)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/v1/adaptor/cpp17)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/v1/adaptor/tr1)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/v1/adaptor/boost)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/v1/adaptor/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/v1/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/selection)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/comparison)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/tuple)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/tuple/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/variadic)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/variadic/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/array)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/array/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/repetition)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/repetition/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/repetition/detail/edg)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/repetition/detail/dmc)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/repetition/detail/msvc)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/logical)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/config)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/facilities)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/facilities/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/seq)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/seq/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/slot)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/slot/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/list)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/list/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/list/detail/edg)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/list/detail/dmc)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/iteration)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/iteration/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/iteration/detail/iter)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/iteration/detail/bounds)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/arithmetic)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/arithmetic/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/punctuation)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/punctuation/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/detail/dmc)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/debug)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/control)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/control/detail)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/control/detail/edg)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/control/detail/dmc)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include/msgpack/preprocessor/control/detail/msvc)
include_directories(/home/danpf/git/binder/examples/mmtf_example/msgpack_include)
set_property(GLOBAL PROPERTY POSITION_INDEPENDENT_CODE ON)
add_definitions(-DNDEBUG)
add_library(mmtf_cpp SHARED
	mmtf_cpp.cpp
	std/exception.cpp
	std/locale_classes.cpp
	std/ios_base.cpp
	std/ostream_tcc.cpp
	std/fstream_tcc.cpp
	std/stl_vector.cpp
	std/stl_vector_1.cpp
	std/stl_vector_2.cpp
	std/stl_vector_3.cpp
	std/stl_vector_4.cpp
	std/stl_vector_5.cpp
	std/sstream_tcc.cpp
	unknown/unknown.cpp
	unknown/unknown_1.cpp
	unknown/unknown_2.cpp
	unknown/unknown_3.cpp
	std/stl_map.cpp
	unknown/unknown_4.cpp
	unknown/unknown_5.cpp
	unknown/unknown_6.cpp
	unknown/unknown_7.cpp
	unknown/unknown_8.cpp
	unknown/unknown_9.cpp
)
set_target_properties(mmtf_cpp PROPERTIES PREFIX "")
set_target_properties(mmtf_cpp PROPERTIES SUFFIX ".so")
